--- a/frontend/revit-sync-frontend/package.json
+++ b/frontend/revit-sync-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "revit-insights-frontend",
+  "name": "revit-sync-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
