--- a/revit-addin/RevitSync.Addin/RevitSync.Addin/RevitSync.Addin.csproj
+++ b/revit-addin/RevitSync.Addin/RevitSync.Addin/RevitSync.Addin.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7AF9D8DB-6CEA-4E88-98FE-B2ED1BF112C3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RevitInsights.Addin</RootNamespace>
-    <AssemblyName>RevitInsights.Addin</AssemblyName>
+    <RootNamespace>RevitSync.Addin</RootNamespace>
+    <AssemblyName>RevitSync.Addin</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -71,7 +71,7 @@
 if not exist "%25APPDATA%25\Autodesk\Revit\Addins\2026" mkdir "%25APPDATA%25\Autodesk\Revit\Addins\2026"
 
 REM Copy the freshly built DLL to the Addins folder
-copy /Y "$(TargetPath)" "%25APPDATA%25\Autodesk\Revit\Addins\2026\RevitInsights.Addin.dll"
+copy /Y "$(TargetPath)" "%25APPDATA%25\Autodesk\Revit\Addins\2026\RevitSync.Addin.dll"
 </PostBuildEvent>
   </PropertyGroup>
 </Project>
